frontend/themes/web6themes/assets/css/style.css
/*--
Author: W3layouts
Author URL: http://w3layouts.com
License: Creative Commons Attribution 3.0 Unported
License URL: http://creativecommons.org/licenses/by/3.0/
--*/
html, body{
    font-size: 100%;
	background:	#fff;
	font-family:'Open Sans', sans-serif;
}
p{
	margin:0;
	font-size:14px;
}
h1,h2,h3,h4,h5,h6{
	font-family: 'Glegoo', serif;
	margin:0;
}
ul,label{
	margin:0;
	padding:0;
}
body a:hover{
	text-decoration:none;
}
/*-- header --*/
input[type="submit"],.panel-body ul li a,.checkout-right-basket a,.additional_info_sub_grid_right a,.panel_bottom li a,.panel-title a,.breadcrumb_dress ul li a,.multi-column-dropdown li a,.footer-copy p a,.w3_footer_grid ul li a,.agileinfo_banner_bottom1_grid_left a,.navbar-default .navbar-nav > li > a,.simpleCart_shelfItem p a,.agile_ecommerce_tab_left h5 a,.w3_hs_bottom ul li a,.team-bottom a{
	transition:.5s ease-in-out;
	-webkit-transition:.5s ease-in-out;
	-moz-transition:.5s ease-in-out;
	-o-transition:.5s ease-in-out;
}
.header {
    padding: 2em 0 0;
}
.w3l_login{
	float:left;
}
.w3l_logo{
	float:left;
	margin-left:22em;
}
.w3l_logo h1 a{
	font-size:1.1em;
	color:#212121;
	text-decoration:none;
}
.w3l_logo h1 a span {
    display: block;
    font-size: .3em;
    text-transform: capitalize;
    letter-spacing: 7px;
    padding-left: 4px;
    text-align: center;
    margin-top: 0.5em;
}
.w3l_login a {
    font-size: .8em;
    color: #3c43a4;
    width: 50px;
    height: 50px;
    display: block;
    text-align: center;
    border: 1px solid #3c43a4;
	margin-top: 0.5em;
}
.w3l_login a span{
	top:1.3em;
}
a.act {
    color:#ff5063 !important;
}
/*-- search --*/
.search{
	position: relative;
    display: inline-block;
    float: left;
    margin:0.8em 0 0 8em;
}
label.icon-search {
    color: #212121;
	cursor: pointer;
}
.search_form{
	position:absolute;
	z-index:9999;
	right:0;
	top:15px;
	overflow: hidden;
	width: 20px;
	height:0px;
	background:#212121;
	transition: height 0.2s ease-out 0.5s , top 0.2s ease-out 0.5s, padding 0.2s ease-out 0.5s, width 0.3s ease-out 0.2s;
	-webkit-transition: height 0.2s ease-out 0.5s , top 0.2s ease-out 0.5s, padding 0.2s ease-out 0.5s, width 0.3s ease-out 0.2s;
}
.search_form form{
	opacity:0;
	transition:all 0.3s ease-out;
	-webkit-transition:all 0.3s ease-out;
}
.search_form input[type='text']{
	width: 380px;
    padding: 10px;
    outline: none;
    font-size: 14px;
    color:#fff;
    border: 1px solid #999;
    background: none;
}
.search_form input[type='text']::-webkit-input-placeholder{
	color:#fff !important;
}
.search_form input[type='submit']{
    outline: none;
    background: none;
    display: inline-block;
    color: #fff;
    font-size: 14px;
    border: 1px solid #999;
    text-transform: uppercase;
    padding: 10px 28px;
}
.search_form input[type='submit']:hover{
	background:#fff;
	border:1px solid #fff;
	color:#212121;
}
.search_box{
	visibility: hidden;
}
.search_box:checked~.search_form{
    width: 500px;
    height: 62px;
    padding: 10px;
    top: 44px;
	transition: height 0.2s ease-out, top 0.2s ease-out, padding 0.2s ease-out, 0.3s width ease-out 0.2s;
	-webkit-transition: height 0.2s ease-out, top 0.2s ease-out, padding 0.2s ease-out, 0.3s width ease-out 0.2s;
}
.search_box:checked~.search_form form{
	opacity:1;
	transition:0.3s all ease-out 0.5s;
	-webkit-transition:0.3s all ease-out 0.5s;
}
label.icon-search span {
    color: #ff5063;
    border: 1px solid;
    padding: .6em;
}
/*-- //search --*/
.box_1 {
	float: right;
	margin-top: 10px;
}
.box_1 a {
  color:#3c43a4;
  font-size: 1em;
  margin: 0;
}
.total {
  display: inline-block;
  vertical-align: middle;
}
.box_1 a img {
  margin: 3px 0 0 0px;
}
.box_1 p {
	margin: 0;
    color: #999;
    font-size: 14px;
}
a.simpleCart_empty {
	color:#212121;
    font-size: 13px;
    text-decoration: none;
    text-align: right;
    display: block;
}
.w3view-cart {
    background: #ff5063;
    border: none;
    -o-border-radius: 7%;
    -ms-border-radius: 7%;
    -moz-border-radius: 7%;
    -webkit-border-radius: 7%;
    border-radius: 7%;
    width: 50px;
    height: 44px;
    text-align: center;
    outline: none;
    position: fixed;
    right: 14%;
	z-index: 999
}
.w3view-cart i.fa {
    font-size: 1.8em;
    color: #ffffff;
    vertical-align: middle;
}
/*-- //header --*/ 
/*-- cart-css --*/ 
#w3lssbmincart form {
    position: relative;
    padding: 1em;
    background: #fbfbfb;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	-o-border-radius: 4px;
	-ms-border-radius: 4px;
    border-radius: 4px;
    color: #333;
	-webkit-box-shadow: 0px 0px 5px 2px #9a9a9a;
	-moz-box-shadow: 0px 0px 5px 2px #9a9a9a;
	-o-box-shadow: 0px 0px 5px 2px #9a9a9a;
	-ms-box-shadow: 0px 0px 5px 2px #9a9a9a;
    box-shadow: 0px 0px 5px 2px #9a9a9a;
}
#w3lssbmincart form  ul {
    overflow-y: scroll;
    max-height: 300px;
}
#w3lssbmincart {
    display: none;
    position: fixed;
    left: 68%;
    top:16%;
	width: 420px;
} 
.sbmincart-showing #w3lssbmincart {
    display: block;
    z-index: 9999; 
    -webkit-animation: zoomIn .3s ease;
	-moz-animation: zoomIn .3s ease;
	-o-animation: zoomIn .3s ease;
	-ms-animation: zoomIn .3s ease;
	animation: zoomIn .3s ease;
}
#w3lssbmincart form.sbmincart-empty {    font-size: 16px;    font-weight: bold;}
#w3lssbmincart ul {    clear: both;    float: left;    width: 100%;    margin: 5px 0 20px;    padding: 1em;    list-style-type: none;    background: #fff;    border: 1px solid #ccc;    border-radius: 4px;    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);}
#w3lssbmincart .sbmincart-empty ul {    display: none;}
#w3lssbmincart .sbmincart-closer {
    float: right;
    margin:-8px -10px 0;
    padding: 0 10px;
    background: 0;
    border: 0;
    font-size: 25px;
    cursor: pointer;
    font-weight: bold;
    outline: none;
}
#w3lssbmincart .sbmincart-item {
    clear: left;
    padding: 7px 0;
    min-height: 35px;
	font-size: 0.85em;
}
/* ... */

